# rtw

./: .bazelrc  .clang-format  .clang-tidy  .clangd  .gitignore  .pre-commit-config.yaml  LICENSE  MODULE.bazel  README.md  WORKSPACE  cc_defs.bzl  cc_test_with_llvm_symbolizer.bzl  extensions.bzl
bzlmod_registery/modules/cli11/: metadata.json
bzlmod_registery/modules/imgui/: metadata.json
bzlmod_registery/modules/implot/: metadata.json
constants/: BUILD  README.md  math_constants.h  render_constants.h  time_constants.h
ecs/: BUILD  README.md  ecs.h
ecs/tests/: BUILD  ecs_test.cpp
event_bus/: BUILD  README.md  event_bus.h
event_bus/tests/: BUILD  event_bus_test.cpp
fixed_point/: BUILD  fixed_point.h  format.h  int128.h  math.h  operations.h
fixed_point/tests/: BUILD  fixed_point_test.cpp  int128_test.cpp  math_tests.cpp  operations_test.cpp
math/: BUILD  README.md  angle.h  barycentric.h  barycentric_operations.h  bounding_box.h  convex_polygon.h  convex_polygon_operations.h  format.h  frustum.h  interpolation.h  intersection.h  matrix.h  matrix_decomposition.h  matrix_eigen_decomposition.h  matrix_operations.h  numeric.h  operations.h  ostream.h  plane.h  point.h  point_operations.h  quaternion.h  quaternion_operations.h  transform2.h  transform3.h  vector.h  vector_operations.h
math/tests/: BUILD  angle_test.cpp  barycentric_test.cpp  convex_polygon_test.cpp  frustum_test.cpp  interpolation_test.cpp  intersection_test.cpp  matrix_decomposition_test.cpp  matrix_eigen_decomposition_test.cpp  matrix_storage_order_test.cpp  matrix_test.cpp  numeric_test.cpp  operations_test.cpp  point_test.cpp  quaternion_test.cpp  transform2_test.cpp  transform3_test.cpp  vector_test.cpp
multiprecision/: BUILD  README.md  fixed_point.h  fixed_point_math.h  format.h  int128.h  int128_math.h  math.h  operations.h  ostream.h  rational.h  rational_math.h
multiprecision/analysis/: chebyshev_trig.py
multiprecision/benchmarks/: BUILD  fixed_point_benchmark.cpp
multiprecision/tests/: BUILD  fixed_point_math_test.cpp  fixed_point_test.cpp  int128_test.cpp  math_test.cpp  math_tests.cpp  operations_test.cpp  rational_test.cpp
sandbox/ecs/: BUILD  application.cpp  application.h  events.h  main.cpp
sandbox/sw_renderer/: BUILD  README.md  fixed_point_main.cpp  main.cpp  main_programmable.cpp
stl/: BUILD  README.md  circular_buffer.h  contiguous_storage.h  contiguous_storage_iterator.h  contracts.cpp  contracts.h  flags.h  flat_unordered_map.h  flat_unordered_set.h  format.h  graph.h  hash_iterator.h  heap_array.h  id.h  inplace_string.h  iterator.h  ostream.h  packed_buffer.h  queue.h  source_location.h  span.h  stack.h  static_contiguous_storage.h  static_flat_unordered_map.h  static_flat_unordered_set.h  static_priority_queue.h  static_queue.h  static_stack.h  static_string.h  static_vector.h  string_view.h
stl/tests/: BUILD  circular_buffer_test.cpp  contiguous_storage_test.cpp  contracts_ignore_test.cpp  contracts_observe_test.cpp  contracts_quick_enforce_test.cpp  contracts_test.cpp  flags_test.cpp  flat_unordered_map_test.cpp  flat_unordered_set_test.cpp  graph_test.cpp  heap_array_test.cpp  inplace_circular_buffer_test.cpp  inplace_contiguous_storage_test.cpp  inplace_flat_unordered_map_test.cpp  inplace_flat_unordered_set_test.cpp  inplace_graph_test.cpp  inplace_packed_buffer_test.cpp  inplace_queue_test.cpp  inplace_stack_test.cpp  inplace_static_contiguous_storage_test.cpp  inplace_static_flat_unordered_map_test.cpp  inplace_static_flat_unordered_set_test.cpp  inplace_static_priority_queue_test.cpp  inplace_static_queue_test.cpp  inplace_static_stack_test.cpp  inplace_static_vector_test.cpp  inplace_string_test.cpp  packed_buffer_test.cpp  queue_test.cpp  source_location_test.cpp  span_test.cpp  stack_test.cpp  static_contiguous_storage_test.cpp  static_flat_unordered_map_test.cpp  static_flat_unordered_set_test.cpp  static_priority_queue_test.cpp  static_queue_test.cpp  static_stack_test.cpp  static_string_test.cpp  (+2 more)
sw_renderer/: BUILD  README.md  barycentric.h  builtin_shaders.h  camera.h  circular_buffer.h  clip_space.h  clipping.h  color.h  color_buffer.h  contiguous_storage.h  depth_buffer.h  flags.h  format.h  frame_buffer.h  mesh.h  obj_loader.cpp  obj_loader.h  operations.h  ostream.h  packed_buffer.h  pipeline.cpp  pipeline.h  pipeline_state.h  precision.h  projection.h  queue.h  raster_common.h  rasterisation_routines.h  register_file.h  render_stats.h  renderer.cpp  renderer.h  renderer2d.h  renderer3d.h  sampler.h  shader.h  shader_builtins.h  tex_coord.h  texture.h  (+5 more)
sw_renderer/benchmarks/: BUILD  pipeline_benchmark.cpp  rasterisation_benchmark.cpp
sw_renderer/fixed_pipeline/: BUILD  README.md  rasterisation_routines.h  renderer.cpp  renderer.h
sw_renderer/fixed_pipeline/tests/: BUILD  rasterisation_fixed_point_test.cpp  rasterisation_test.cpp  (+1 more)
sw_renderer/programmable_pipeline/: BUILD  README.md  builtin_shaders.h  clip_space.h  frame_buffer.h  pipeline.cpp  pipeline.h  pipeline_rasterisation.h  pipeline_state.h  register_file.h  sampler.h  shader.h  shader_builtins.h  varyings.h  vertex_layout.h  vertex_stream.h
sw_renderer/resources/: BUILD  cube.mtl  textured_cube.mtl
sw_renderer/tests/: BUILD  barycentric_test.cpp  builtin_shaders_fixed_point_test.cpp  builtin_shaders_test.cpp  circular_buffer_test.cpp  clipping_fixed_point_test.cpp  clipping_test.cpp  color_buffer_test.cpp  color_test.cpp  contiguous_storage_test.cpp  depth_buffer_test.cpp  flags_test.cpp  frame_buffer_test.cpp  obj_loader_test.cpp  operations_test.cpp  packed_buffer_test.cpp  pipeline_fixed_point_test.cpp  pipeline_state_test.cpp  pipeline_test.cpp  projection_test.cpp  queue_test.cpp  raster_common_test.cpp  rasterisation_fixed_point_test.cpp  rasterisation_test.cpp  register_file_test.cpp  renderer_test.cpp  sampler_test.cpp  shader_builtins_fixed_point_test.cpp  shader_builtins_test.cpp  shader_fixed_point_test.cpp  shader_test.cpp  tex_coord_test.cpp  varyings_test.cpp  vertex_input_fixed_point_test.cpp  vertex_layout_test.cpp  vertex_stream_test.cpp
(+42 files in other folders)
